modules/seed/templates/addons/nginx-ingress/manifests/nginx-ingress.yaml
#
# namespace
#
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: nginx-ingress
  name: nginx-ingress-controller
  namespace: nginx-ingress
spec:
  type: "ClusterIP"
  selector:
    app: nginx-ingress
    component: "controller"
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress
  name: nginx-default-backend
  namespace: nginx-ingress
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: nginx-ingress
    component: "nginx-default-backend"
  type: "ClusterIP"

---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: nginx-ingress
  name: nginx-ingress-controller
  namespace: nginx-ingress
spec:
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx-ingress
        component: "controller"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: node-role.kubernetes.io/master
                  operator: DoesNotExist
      nodeSelector:
        node-role.kubernetes.io/node: ""
      containers:
        - name: nginx-ingress-controller
          image: "gcr.io/google_containers/nginx-ingress-controller:${version}"
          imagePullPolicy: "IfNotPresent"
          args:
            - /nginx-ingress-controller
            - --default-backend-service=nginx-ingress/nginx-default-backend
            - --ingress-class=nginx
            - --configmap=nginx-ingress/nginx-ingress-controller
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
          resources:
            {}
            
      hostNetwork: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccountName: nginx-ingress
      terminationGracePeriodSeconds: 60

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: nginx-ingress
  name: nginx-default-backend
  namespace: nginx-ingress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-ingress
        component: "nginx-default-backend"
    spec:
      containers:
        - name: nginx-default-backend
          image: gcr.io/google_containers/defaultbackend:1.0
          imagePullPolicy: "IfNotPresent"
          args:
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            {}
            
      terminationGracePeriodSeconds: 60
